--- a/src/Movie.css
+++ b/src/Movie.css
@@ -7,7 +7,7 @@
   margin-bottom: 70px;
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   font-weight: 300;
   padding: 20px;
   border-radius: 5px;
