--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -14,6 +14,7 @@
   color: #adaeb9;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
+  text-decoration: none;
 }
 
 .movie img {
@@ -30,6 +31,7 @@
 .movie .movie__year {
   margin: 0;
   font-weight: 300;
+  text-decoration: none;
 }
 
 .movie .movie__title {
